--- a/vietnamese-role.html
+++ b/vietnamese-role.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/role.css">
 </head>
 <body>
     <div class="grid wide">
@@ -17,21 +17,28 @@
             <div class="inner">
                 <div class="row">
                     <div class="col l-12 m-12 c-12">
-                        <h1 class="title">Chọn ngôn ngữ?</h1>
+                        <h1 class="title">Bạn là...?</h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col l-4 l-o-2 m-6 c-6">
-                        <a href="./vietnamese-role.html" class="item">
-                            <img src="./assets/img/vietnam.png" alt="Vietnamese Flag" class="item__image">
-                            <h1 class="item__title">Tiếng Việt</h1>
+                        <a href="./vietnamese-student-login.html" class="item">
+                            <img src="./assets/img/student.png" alt="Vietnamese Flag" class="item__image">
+                            <h1 class="item__title">Học sinh</h1>
                         </a>
                     </div>
                     <div class="col l-4 m-6 c-6">
                         <a href="#" class="item">
-                            <img src="./assets/img/united-states-of-america.png" alt="USA Flag" class="item__image">
-                            <h1 class="item__title">Tiếng Anh</h1>
+                            <img src="./assets/img/teacher.png" alt="USA Flag" class="item__image">
+                            <h1 class="item__title">Giáo viên</h1>
                         </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col l-2 l-o-2 m-4 m-o-4 c-8 c-o-2">
+                        <div class="back-btn">
+                            <a href="./index.html">Trở lại</a>
+                        </div>
                     </div>
                 </div>
             </div>
