--- a/vietnamese-student-main.html
+++ b/vietnamese-student-main.html
@@ -21,9 +21,9 @@
                         <h1 class="item__content-title">Học bài</h1>
                         <small class="item__content-sub-title">Tìm hiểu kiến thức mới</small>
                     </div>
-                    <button class="item__btn">
+                    <a href="./vietnamese-student-learn.html" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="col l-3 m-6 c-12">
@@ -33,9 +33,9 @@
                         <h1 class="item__content-title">Trò chơi</h1>
                         <small class="item__content-sub-title">Giải trí với trò chơi thú vị</small>
                     </div>
-                    <button class="item__btn">
+                    <a href="#" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="col l-3 m-6 c-12">
@@ -45,9 +45,9 @@
                         <h1 class="item__content-title">Ôn tập</h1>
                         <small class="item__content-sub-title">Làm bài trắc nghiệm ôn tập</small>
                     </div>
-                    <button class="item__btn">
+                    <a href="#" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="col l-3 m-6 c-12">
@@ -57,9 +57,9 @@
                         <h1 class="item__content-title">Tài khoản</h1>
                         <small class="item__content-sub-title">Hồ sơ cá nhân của bạn</small>
                     </div>
-                    <button class="item__btn">
+                    <a href="#" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
