--- a/vietnamese-student-main.html
+++ b/vietnamese-student-main.html
@@ -33,7 +33,7 @@
                         <h1 class="item__content-title">Trò chơi</h1>
                         <small class="item__content-sub-title">Giải trí với trò chơi thú vị</small>
                     </div>
-                    <a href="#" class="item__btn">
+                    <a href="./vietnamese-student-game.html" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </a>
                 </div>
@@ -45,7 +45,7 @@
                         <h1 class="item__content-title">Ôn tập</h1>
                         <small class="item__content-sub-title">Làm bài trắc nghiệm ôn tập</small>
                     </div>
-                    <a href="#" class="item__btn">
+                    <a href="./vietnamese-student-practice.html" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </a>
                 </div>
@@ -57,7 +57,7 @@
                         <h1 class="item__content-title">Tài khoản</h1>
                         <small class="item__content-sub-title">Hồ sơ cá nhân của bạn</small>
                     </div>
-                    <a href="#" class="item__btn">
+                    <a href="./vietnamese-student-account.html" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </a>
                 </div>
