--- a/vietnamese-student-login.html
+++ b/vietnamese-student-login.html
@@ -46,7 +46,7 @@
                   />
                 </div>
                 <small class="inner__alert"></small>
-                <a href="./vietnamese-student-main.html" class="inner__body-btn">Đăng nhập</a>
+                <a id="signin" href="./vietnamese-student-main.html" class="inner__body-btn">Đăng nhập</a>
               </div>
             </div>
           </div>
@@ -54,6 +54,5 @@
       </div>
     </div>
   </body>
-  <script src="./assets/js/index.js"></script>
-  <script src="./assets/database/data.js"></script>
+  <script type="module" src="./assets/js/student-login.js"></script>
 </html>
