--- a/vietnamese-student-account.html
+++ b/vietnamese-student-account.html
@@ -9,11 +9,59 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/account.css">
 </head>
 <body>
     <div class="grid wide">
-        
+        <div class="row container">
+            <div class="col l-3 m-4 c-12">
+                <div class="info__main">
+                    <div class="info__main-image">
+                        <img src="./assets/img/account-avata.png" alt="Avatar">
+                    </div>
+                    <p class="info__main-name">Trần Phan Bảo Toàn</p>
+                    <p class="info__main-role">Học sinh</p>
+
+                    <ul class="info__main-list">
+                        <li class="info__main-list-item item--active">Hồ sơ</li>
+                        <li class="info__main-list-item">Cài đặt tài khoản</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col l-9 m-8 c-12">
+                <div class="info__detail">
+                    <ul class="info__detail-list">
+                        <li class="info__detail-list-item">
+                            <p class="info__detail-list-item-attribute">Họ và tên:</p>
+                            <p class="info__detail-list-item-content">Trần Phan Bảo Toàn</p>
+                        </li>
+                        <li class="info__detail-list-item">
+                            <p class="info__detail-list-item-attribute">Ngày sinh:</p>
+                            <p class="info__detail-list-item-content">13/11/2002</p>
+                        </li>
+                        <li class="info__detail-list-item">
+                            <p class="info__detail-list-item-attribute">Giới tính:</p>
+                            <p class="info__detail-list-item-content">Nam</p>
+                        </li>
+                        <li class="info__detail-list-item">
+                            <p class="info__detail-list-item-attribute">Lớp:</p>
+                            <p class="info__detail-list-item-content">TOAN1</p>
+                        </li>
+                        <li class="info__detail-list-item">
+                            <p class="info__detail-list-item-attribute">Năm học:</p>
+                            <p class="info__detail-list-item-content">2021 - 2022</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row back">
+                <div class="col l-12 m-12 c-12">
+                    <div class="back-btn">
+                        <a href="./vietnamese-student-main.html">Trở lại</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
