--- a/vietnamese-student-main.html
+++ b/vietnamese-student-main.html
@@ -30,10 +30,10 @@
                 <div class="item">
                     <img class="item__img" src="https://img.icons8.com/clouds/100/000000/controller.png"/>
                     <div class="item__content">
-                        <h1 class="item__content-title">Trò chơi</h1>
-                        <small class="item__content-sub-title">Giải trí với trò chơi thú vị</small>
+                        <h1 class="item__content-title">Làm bài thi</h1>
+                        <small class="item__content-sub-title">Làm bài thi trắc nghiệm</small>
                     </div>
-                    <a href="./vietnamese-student-game.html" class="item__btn">
+                    <a href="./vietnamese-student-test.html" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </a>
                 </div>
@@ -42,10 +42,10 @@
                 <div class="item">
                     <img class="item__img" src="https://img.icons8.com/bubbles/100/000000/education.png"/>
                     <div class="item__content">
-                        <h1 class="item__content-title">Ôn tập</h1>
-                        <small class="item__content-sub-title">Làm bài trắc nghiệm ôn tập</small>
+                        <h1 class="item__content-title">Thành tích</h1>
+                        <small class="item__content-sub-title">Xem kết quả học tập</small>
                     </div>
-                    <a href="./vietnamese-student-practice.html" class="item__btn">
+                    <a href="./vietnamese-student-result.html" class="item__btn">
                         <i class="fa-solid fa-arrow-right-long"></i>
                     </a>
                 </div>
