--- a/vietnamese-student-account.html
+++ b/vietnamese-student-account.html
@@ -19,49 +19,71 @@
                     <div class="info__main-image">
                         <img src="./assets/img/account-avata.png" alt="Avatar">
                     </div>
-                    <p class="info__main-name">Trần Phan Bảo Toàn</p>
-                    <p class="info__main-role">Học sinh</p>
+                    <p id="info-name" class="info__main-name"></p>
+                    <p id="info-role" class="info__main-role"></p>
 
                     <ul class="info__main-list">
-                        <li class="info__main-list-item item--active">Hồ sơ</li>
-                        <li class="info__main-list-item">Cài đặt tài khoản</li>
+                        <li data-index="0" class="info__main-list-item item--active">Hồ sơ</li>
+                        <li data-index="1" class="info__main-list-item">Chỉnh sửa thông tin</li>
                     </ul>
                 </div>
             </div>
             <div class="col l-9 m-8 c-12">
                 <div class="info__detail">
-                    <ul class="info__detail-list">
-                        <li class="info__detail-list-item">
-                            <p class="info__detail-list-item-attribute">Họ và tên:</p>
-                            <p class="info__detail-list-item-content">Trần Phan Bảo Toàn</p>
-                        </li>
-                        <li class="info__detail-list-item">
-                            <p class="info__detail-list-item-attribute">Ngày sinh:</p>
-                            <p class="info__detail-list-item-content">13/11/2002</p>
-                        </li>
-                        <li class="info__detail-list-item">
-                            <p class="info__detail-list-item-attribute">Giới tính:</p>
-                            <p class="info__detail-list-item-content">Nam</p>
-                        </li>
-                        <li class="info__detail-list-item">
-                            <p class="info__detail-list-item-attribute">Lớp:</p>
-                            <p class="info__detail-list-item-content">TOAN1</p>
-                        </li>
-                        <li class="info__detail-list-item">
-                            <p class="info__detail-list-item-attribute">Năm học:</p>
-                            <p class="info__detail-list-item-content">2021 - 2022</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row back">
-                <div class="col l-12 m-12 c-12">
-                    <div class="back-btn">
-                        <a href="./vietnamese-student-main.html">Trở lại</a>
+                    <div id="profile" class="list-item-pane item--active">
+                        <ul class="info__detail-list"></ul>
+                        <div class="row back">
+                            <div class="col l-12 m-12 c-12">
+                                <div id="back-btn" class="back-btn">
+                                    <a href="./vietnamese-student-main.html">Trở lại</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="setting" class="list-item-pane">
+                        <ul class="info__detail-list">
+                            <li class="info__detail-list-item">
+                                <p class="info__detail-list-item-attribute">Họ và tên:</p>
+                                <input id="input-name" type="text" readonly class="info__detail-list-item-input">
+                            </li>
+                            <li class="info__detail-list-item">
+                                <p class="info__detail-list-item-attribute">Ngày sinh:</p>
+                                <input id="input-dob" type="text" readonly class="info__detail-list-item-input">
+                            </li>
+                            <li class="info__detail-list-item">
+                                <p class="info__detail-list-item-attribute">Giới tính:</p>
+                                <input id="input-gender" type="text" readonly class="info__detail-list-item-input">
+                            </li>
+                            <li class="info__detail-list-item">
+                                <p class="info__detail-list-item-attribute">Lớp:</p>
+                                <input id="input-class" type="text" readonly class="info__detail-list-item-input">
+                            </li>
+                            <li class="info__detail-list-item">
+                                <p class="info__detail-list-item-attribute">Năm học:</p>
+                                <input id="input-semester" type="text" readonly class="info__detail-list-item-input">
+                            </li>
+                        </ul>
+                        <div class="row">
+                            <div class="col l-12 m-12 c-12">
+                                <div id="update-info-btn" class="back-btn">
+                                    <a>Sửa thông tin</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col l-12 m-12 c-12">
+                                <div id="back-btn" class="back-btn">
+                                    <a href="./vietnamese-student-main.html">Trở lại</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script type="module" src="./assets/js/student-account.js"></script>
 </body>
 </html>
